part1/1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo # This is the app as declared in the deployment.
  ports:
    - protocol: TCP
      port: 8080 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 80 # This is the target port
