part1/1.08/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-svc
          servicePort: 8080
